k8-manifests/traefik-middleware-body-limit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: body-size-limit
  namespace: default
spec:
  buffering:
    maxRequestBodyBytes: 104857600
    memRequestBodyBytes: 10485760
    maxResponseBodyBytes: 0
    memResponseBodyBytes: 1048576
