k8-manifests/traefik-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nbs-custom-headers
  namespace: default
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: "Allow"
      Cross-Origin-Opener-Policy: "same-origin"
